--- a/comunicaciones.css
+++ b/comunicaciones.css
@@ -3,7 +3,7 @@
 /* ------------------------- */
 
 body {
-     background-image: linear-gradient(135deg, #074901 0%, #e2d1c3 100%);
+     background-image: linear-gradient(135deg, #074901 0%, #6b6967 100%);
 }
 
 .titulo {
